force-app/main/default/objects/Price_History__c/Price_History__c.object-meta.xml
<CustomObject>
    <description>Logs historical price changes for products.</description>
    <label>Price History</label>
    <nameField>
        <displayFormat>PH-{000000}</displayFormat>
        <label>Price History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>