force-app/main/default/objects/Price_History__c/fields/Date_Changed__c.field-meta.xml
<CustomField>
    <fullName>Date_Changed__c</fullName>
    <defaultValue>Now()</defaultValue>
    <description>The date and time when the price was changed.</description>
    <label>Date Changed</label>
    <type>DateTime</type>
</CustomField>