force-app/main/default/objects/Price_History__c/fields/Old_Price__c.field-meta.xml
<CustomField>
    <fullName>Old_Price__c</fullName>
    <description>The previous price of the product.</description>
    <label>Old Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>